# neural-feature-identification-pipeline

./: .gitignore  LICENSE  Makefile  README.md  config.json  config.yaml  environment.yaml  estimate_manifest_file_sizes.py  init_session_env.sh.example  pyproject.toml
.snakemake/iocache/: latest.pkl
.snakemake/metadata/: L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0L2V2ZW50cy5oNQ==  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0L2ZlYXR1cmVzL01BVi5oNQ==  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0L2ZlYXR1cmVzL05GUi5oNQ==  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0L2ZlYXR1cmVzL0RXVC1EQjQuaDU=  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0L2ZlYXR1cmVzL1NCUC1SQVcuaDU=  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0L2tpbmVtYXRpY3MuaDU=  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0MC9ldmVudHMuaDU=  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0MC9mZWF0dXJlcy9EV1QtREI0Lmg1  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0MC9mZWF0dXJlcy9NQVYuaDU=  L3NjcmF0Y2gvZ2VuZXJhbC92YXN0L3UxNDI0ODc1L25ldXJhbC1mZWF0dXJlLWlkZW50aWZpY2F0aW9uLXBpcGVsaW5lLzE0MC9mZWF0dXJlcy9ORlIuaDU=  (+922 more)
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: train-test-split-validation.ipynb
reports/: manifest_annotations.yaml
workflow/: Snakefile  matlab_config.json
workflow/rules/: common.smk  (+2 more)
(+79 files in other folders)
