[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neural_feature_identification"
version = "0.0.1"
description = "Data analysis pipeline for identifying features from USEA neural signals that yield the highest performance and longevity for controlling high-DOF prosthetic hands."
authors = [
  { name = "Fredi R. Mino" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"

# Main packages needed for the project to run
dependencies = [
    "polars",
    "numpy",
    "scipy",
    "h5py",
    "snakemake",
    "snakemake-executor-plugin-slurm",
    "seaborn",
    "d3blocks",
    "altair",
    "loguru",
    "tqdm",
    "python-dotenv",
    "tables>=3.10.2",
    "scikit-learn>=1.7.2",
]

# Optional packages for development
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mkdocs",
    "typer",
    "ipykernel",
    "jupyterlab>=4.4.9",
    "vegafusion>=2.0.3",
    "vegafusion-python-embed>=1.6.9",
    "vl-convert-python>=1.8.0",
]

[tool.ruff]
line-length = 99
src = ["neural_feature_identification"]
include = ["pyproject.toml", "neural_feature_identification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["neural_feature_identification"]
force-sort-within-sections = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q" # add options: -ra (report all except passed), -q (quiet)
testpaths = [
    "tests",
]
